--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -1217,69 +1217,9 @@
 
 	#region Deseados
 
-	private async void CambiarEstadoDeseado(MouseEventArgs e, bool estado, JuegoDRM drm)
+	private void CambiarEstadoDeseado(MouseEventArgs e, bool estado, JuegoDRM drm)
 	{
-		List<Juegos.JuegoDeseado> deseados = new List<Juegos.JuegoDeseado>();
-
-		if (usuario.Wishlist != null)
-		{
-			deseados = JsonConvert.DeserializeObject<List<Juegos.JuegoDeseado>>(usuario.Wishlist);
-		}
-
-		Herramientas.Deseados.ActualizarJuegoConUsuarios(juego.Id, juego.UsuariosInteresados, drm, usuario, estado);
-
-		if (estado == true)
-		{
-			bool añadir = true;
-
-			if (deseados.Count > 0)
-			{
-				foreach (var deseado in deseados)
-				{
-					if (int.Parse(deseado.IdBaseDatos) == juego.Id && deseado.DRM == drm)
-					{
-						añadir = false;
-					}
-				}
-			}
-
-			if (añadir == true)
-			{
-				Juegos.JuegoDeseado deseado = new Juegos.JuegoDeseado();
-				deseado.IdBaseDatos = juego.Id.ToString();
-				deseado.DRM = drm;
-
-				deseados.Add(deseado);
-			}
-
-			usuario.Wishlist = JsonConvert.SerializeObject(deseados);
-
-			await UserManager.UpdateAsync(usuario);
-		}
-		else
-		{
-			int posicion = -1;
-
-			if (deseados.Count > 0)
-			{
-				for (int i = 0; i < deseados.Count; i += 1)
-				{
-					if (int.Parse(deseados[i].IdBaseDatos) == juego.Id && deseados[i].DRM == drm)
-					{
-						posicion = i;
-					}
-				}
-			}
-
-			if (posicion >= 0)
-			{
-				deseados.RemoveAt(posicion);
-			}
-
-			usuario.Wishlist = JsonConvert.SerializeObject(deseados);
-
-			await UserManager.UpdateAsync(usuario);
-		}
+		Herramientas.Deseados.CambiarEstado(UserManager, usuario, juego, estado, drm);
 	}
 
 	#endregion
