--- a/pepeizqs deals web/Pages/Index.cshtml
+++ b/pepeizqs deals web/Pages/Index.cshtml
@@ -2,12 +2,12 @@
 @model IndexModel
 
 @{
-	string titulo = "pepeizq's deals • " + Herramientas.Idiomas.CogerCadena(Model.idioma, "Index.Subtitle");
+	string titulo = "pepeizq's deals • " + Herramientas.Idiomas.CogerCadena(Model.idioma, "Subtitle", "Index");
 
 	ViewData["Title"] = titulo;
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
-	string descripcion = Herramientas.Idiomas.CogerCadena(Model.idioma, "Index.Subtitle");
+	string descripcion = Herramientas.Idiomas.CogerCadena(Model.idioma, "Subtitle", "Index");
 
 	string enlace = "https://pepeizqdeals.com";
 }
